<resources>
    <string name="app_name">ContinentsGuide</string>
    <string name="europe">EUROPE</string>
    <string name="asia">ASIA</string>
    <string name="africa">AFRICA</string>
    <string name="north_and_south_america">NORTH AND SOUTH AMERICA</string>
    <string name="oceania_and_more_exotic_countries">OCEANIA AND MORE EXOTIC COUNTRIES</string>

    <string name="back">BACK</string>
    <string name="quiz">QUIZ</string>
    <string name="submit">SUBMIT</string>
    <string name="main_menu">MAIN MENU</string>

    <string name="europe_title">CONTINENT OF EUROPE</string>
    <string name="asia_title">CONTINENT OF ASIA</string>
    <string name="africa_title">CONTINENT OF AFRICA</string>
    <string name="america_title">CONTINENT OF AMERICA</string>
    <string name="oceania_title">CONTINENT OF OCEANIA</string>

    <string name="europe_text">Europe is a continent in the Western Hemisphere, bordered by the Atlantic Ocean to the west, the Arctic Ocean to the north, and the Black, Caspian, and Mediterranean Seas to the south. It consists of 44 countries and boasts diverse climates, cultures, and histories. The European Union is a significant political and economic force, uniting 27 countries. Europe is a center of global history, art, science, and economics. Capitals such as Paris, Berlin, London, Rome, and Madrid are cultural and economic hubs of the world.</string>
    <string name="asia_text">Asia, the largest continent, spans the Eastern Hemisphere, bordered by the Pacific Ocean to the east, the Indian Ocean to the south, and the Arctic Ocean to the north. It encompasses diverse landscapes, from the vast deserts of the Middle East to the lush rain forests of Southeast Asia. With 49 countries, Asia boasts a rich tapestry of cultures, languages, and traditions. The continent is a hub of economic activity, with dynamic industries driving global commerce. Organizations like the Association of Southeast Asian Nations (ASEAN) foster regional cooperation. Major cities such as Tokyo, Beijing, Delhi, and Istanbul are vibrant centers of innovation and culture.</string>
    <string name="africa_text">Africa is a continent located primarily in the Eastern Hemisphere, bounded by the Atlantic Ocean to the west, the Indian Ocean to the east, and the Mediterranean Sea to the north. It comprises 54 countries and exhibits a rich diversity of cultures, landscapes, and histories. Africa\'s natural beauty encompasses deserts, savannas, forests, and mountains. Despite challenges, it holds immense potential for growth and development. The African Union serves as a pivotal organization for continental cooperation and integration. Major cities such as Cairo, Lagos, Johannesburg, Nairobi, and Addis Ababa are important centers for culture, commerce, and innovation on the continent.</string>
    <string name="america_text">America, comprising North and South America, is a vast continent located primarily in the Western Hemisphere, bordered by the Pacific Ocean to the west, the Atlantic Ocean to the east, and the Arctic Ocean to the north. It showcases a remarkable diversity of landscapes, including mountains, forests, deserts, and tropical rainforests. With 35 countries, America is a melting pot of cultures, languages, and traditions. The continent boasts significant economic powerhouses and technological innovation.</string>
    <string name="oceania_text">Oceania is a geographical region consisting of thousands of islands located in the central and southern parts of the Pacific Ocean. It includes island groups such as Australia, New Zealand, Hawaii, and the islands of Polynesia, Micronesia, and Melanesia. Oceania is characterized by rich biodiversity, including tropical forests, coral reefs, and unique animal species. The diversity of cultures and languages reflects the multitude of ethnic groups inhabiting these islands. The region holds strategic importance for international trade and cooperation and is home to many indigenous peoples who continue to preserve their traditions and customs.</string>

    <string name="question_11">Which country is most famous for its fjords?</string>
    <string name="answer_11">Norway</string>
    <string name="question_12">Which capital city is known as the "City of All Times"?</string>
    <string name="answer_12">Rome</string>
    <string name="question_13">Which country is the birthplace of pizza?</string>
    <string name="answer_13">Italy</string>
    <string name="question_14">Which lake is the largest in Europe?</string>
    <string name="answer_14">Ladoga</string>
    <string name="question_15">Which country is the birthplace of ancient democracy?</string>
    <string name="answer_15">Greece</string>

    <string name="question_21">Which country is famous for its cherry blossoms?</string>
    <string name="answer_21">Japan</string>
    <string name="question_22">Which city is known as the "Pearl of the Orient"?</string>
    <string name="answer_22">Shanghai</string>
    <string name="question_23">Which country is home to the tallest mountain in the world?</string>
    <string name="answer_23">Nepal</string>
    <string name="question_24">Which river is considered the cradle of Chinese civilization?</string>
    <string name="answer_24">Yellow River (Huang He)</string>
    <string name="question_25">Which ancient wonder is located in present-day Iraq?</string>
    <string name="answer_25">Hanging Gardens of Babylon</string>

    <string name="question_31">Which African country is known as the "Rainbow Nation"?</string>
    <string name="answer_31">South Africa</string>
    <string name="question_32">Which desert covers much of North Africa?</string>
    <string name="answer_32">Sahara Desert</string>
    <string name="question_33">Which river is the longest in Africa?</string>
    <string name="answer_33">Nile River</string>
    <string name="question_34">Which African country is home to the Masai Mara National Reserve?</string>
    <string name="answer_34">Kenya</string>
    <string name="question_35">Which mountain is the highest peak in Africa?</string>
    <string name="answer_35">Mount Kilimanjaro</string>

    <string name="question_41">Which country is famous for its maple syrup production?</string>
    <string name="answer_41">Canada</string>
    <string name="question_42">Which river is the longest in South America?</string>
    <string name="answer_42">Amazon River</string>
    <string name="question_43">Which U.S. state is known as the "Sunshine State"?</string>
    <string name="answer_43">Florida</string>
    <string name="question_44">Which iconic canyon is located in the United States?</string>
    <string name="answer_44">Grand Canyon</string>
    <string name="question_45">Which country is home to Machu Picchu?</string>
    <string name="answer_45">Peru</string>

    <string name="question_51">Which country is home to the Great Barrier Reef?</string>
    <string name="answer_51">Australia</string>
    <string name="question_52">Which city is the capital of New Zealand?</string>
    <string name="answer_52">Wellington</string>
    <string name="question_53">Which island country is known as the "Pearl of the Pacific"?</string>
    <string name="answer_53">Fiji</string>
    <string name="question_54">Which indigenous people are the original inhabitants of Hawaii?</string>
    <string name="answer_54">Native Hawaiians</string>
    <string name="question_55">Which Australian city is famous for its opera house?</string>
    <string name="answer_55">Sydney</string>
</resources>